# UdemyCppGui

./: .gitignore  README.md
2_ImGui/0_StartProject/src/: main.cpp
2_ImGui/1_HelloWorld/: CMakeLists.txt
2_ImGui/1_HelloWorld/src/: main.cpp  render.cpp  render.hpp
2_ImGui/Calendar/src/: main.cpp  render.cpp  render.hpp
2_ImGui/CsvTool/: .clang-format
2_ImGui/CsvTool/src/: render.cpp  render.hpp
2_ImGui/Desktop/: CMakeLists.txt
2_ImGui/Desktop/src/: clock.cpp  clock.hpp  main.cpp  render.cpp  render.hpp
2_ImGui/DiffViewer/: .clang-tidy  CMakeLists.txt
2_ImGui/DiffViewer/src/: render.cpp  render.hpp
2_ImGui/FileExplorer/src/: render.cpp  render.hpp
2_ImGui/Final/: .clang-tidy  CMakeLists.txt  vcpkg.json
2_ImGui/Final/_Start/: AdvCalc.cpp  AdvCalc.hpp  Calender.cpp  Calender.hpp  Clock.cpp  CsvEditor.cpp  CsvEditor.hpp  Desktop.cpp  Desktop.hpp  Diff.cpp  Diff.hpp  FileExplorer.cpp  FileExplorer.hpp  OtherTopics.cpp  Paint.cpp  Paint.hpp  TextEditor.cpp  UiHelpers.cpp
2_ImGui/Final/src/: AdvCalc.cpp  AdvCalc.hpp  Calender.hpp  Clock.cpp  Clock.hpp  CsvEditor.cpp  Desktop.cpp  Diff.cpp  FileExplorer.cpp  OtherTopics.cpp  OtherTopics.hpp  Paint.cpp  TextEditor.cpp  TextEditor.hpp  UiHelpers.cpp  UiHelpers.hpp  WindowBase.cpp  WindowBase.hpp  main.cpp
2_ImGui/Paint/: CMakeLists.txt
2_ImGui/Paint/src/: main.cpp  render.cpp  render.hpp
2_ImGui/Plotter/src/: main.cpp  render.cpp  render.hpp
2_ImGui/TextEditor/: example.cpp  vcpkg.json
2_ImGui/TextEditor/src/: render.cpp  render.hpp
2_ImGui/WallClock/: .gitmodules
2_ImGui/WallClock/src/: render.cpp  render.hpp
